reupload all file

--- a/main.ipynb
+++ b/main.ipynb
@@ -10,29 +10,46 @@
      "output_type": "stream",
      "text": [
       "Tombol ditekan, melakukan pengenalan...\n",
-      "Wajah terdeteksi di posisi: 246, 75, 288, 288\n",
+      "Wajah terdeteksi di posisi: 22, 350, 43, 43\n",
       "Fitur wajah berhasil diekstraksi.\n",
-      "1/1 [==============================] - 0s 55ms/step\n",
+      "1/1 [==============================] - 0s 109ms/step\n",
+      "Nama yang dikenali: Safira Yona\n",
+      "Wajah terdeteksi di posisi: 143, 110, 242, 242\n",
+      "Fitur wajah berhasil diekstraksi.\n",
+      "1/1 [==============================] - 0s 22ms/step\n",
       "Nama yang dikenali: Fadh\n",
       "Tombol ditekan, melakukan pengenalan...\n",
-      "Wajah terdeteksi di posisi: 347, 132, 128, 128\n",
+      "Wajah terdeteksi di posisi: 132, 141, 226, 226\n",
+      "Fitur wajah berhasil diekstraksi.\n",
+      "1/1 [==============================] - 0s 23ms/step\n",
+      "Nama yang dikenali: Fadh\n",
+      "Tombol ditekan, melakukan pengenalan...\n",
+      "Tidak ada wajah terdeteksi.\n",
+      "Tombol ditekan, melakukan pengenalan...\n",
+      "Wajah terdeteksi di posisi: 52, 116, 224, 224\n",
       "Fitur wajah berhasil diekstraksi.\n",
       "1/1 [==============================] - 0s 20ms/step\n",
-      "Nama yang dikenali: Abira Azahra\n",
+      "Nama yang dikenali: Fadh\n",
       "Tombol ditekan, melakukan pengenalan...\n",
-      "Wajah terdeteksi di posisi: 315, 136, 130, 130\n",
+      "Tidak ada wajah terdeteksi.\n",
+      "Tombol ditekan, melakukan pengenalan...\n",
+      "Wajah terdeteksi di posisi: 294, 186, 42, 42\n",
+      "Fitur wajah berhasil diekstraksi.\n",
+      "1/1 [==============================] - 0s 25ms/step\n",
+      "Nama yang dikenali: Citra Khusnul\n",
+      "Tombol ditekan, melakukan pengenalan...\n",
+      "Wajah terdeteksi di posisi: 293, 208, 50, 50\n",
+      "Fitur wajah berhasil diekstraksi.\n",
+      "1/1 [==============================] - 0s 20ms/step\n",
+      "Nama yang dikenali: Citra Khusnul\n",
+      "Wajah terdeteksi di posisi: 248, 135, 73, 73\n",
+      "Fitur wajah berhasil diekstraksi.\n",
+      "1/1 [==============================] - 0s 20ms/step\n",
+      "Nama yang dikenali: Citra Khusnul\n",
+      "Tombol ditekan, melakukan pengenalan...\n",
+      "Wajah terdeteksi di posisi: 161, 59, 225, 225\n",
       "Fitur wajah berhasil diekstraksi.\n",
       "1/1 [==============================] - 0s 21ms/step\n",
-      "Nama yang dikenali: Abira Azahra\n",
-      "Tombol ditekan, melakukan pengenalan...\n",
-      "Wajah terdeteksi di posisi: 313, 118, 172, 172\n",
-      "Fitur wajah berhasil diekstraksi.\n",
-      "1/1 [==============================] - 0s 20ms/step\n",
-      "Nama yang dikenali: Fadh\n",
-      "Tombol ditekan, melakukan pengenalan...\n",
-      "Wajah terdeteksi di posisi: 276, 98, 299, 299\n",
-      "Fitur wajah berhasil diekstraksi.\n",
-      "1/1 [==============================] - 0s 18ms/step\n",
       "Nama yang dikenali: Fadh\n"
      ]
     }
