--- a/Scripts/ExtractF.ipynb
+++ b/Scripts/ExtractF.ipynb
@@ -35,8 +35,8 @@
    "source": [
     "\n",
     "# Tentukan folder input dan file output\n",
-    "input_folder = r'Data\\wajah\\augment'  \n",
-    "output_csv = r'Data\\features\\features_with_labels.csv' \n",
+    "input_folder = r'..\\Data\\wajah\\augment'  \n",
+    "output_csv = r'..\\Data\\features\\features_with_labels.csv' \n",
     "\n",
     "output_folder = os.path.dirname(output_csv)  # Ambil path folder\n",
     "os.makedirs(output_folder, exist_ok=True)\n",
