--- a/Scripts/task.ipynb
+++ b/Scripts/task.ipynb
@@ -34,8 +34,8 @@
     "from deepface import DeepFace\n",
     "\n",
     "# Path folder input dan output\n",
-    "input_folder = r'Data\\wajah\\raw\\Fadh'  # Ganti dengan path folder Alice\n",
-    "output_folder = r'Data\\wajah\\crop\\Fadh'  # Output akan disimpan di folder Alice dalam folder output\n",
+    "input_folder = r'..\\Data\\wajah\\raw\\Fadh'  # Ganti dengan path folder Alice\n",
+    "output_folder = r'..\\Data\\wajah\\crop\\Fadh'  # Output akan disimpan di folder Alice dalam folder output\n",
     "\n",
     "# Buat folder output jika belum ada\n",
     "os.makedirs(output_folder, exist_ok=True)\n",
@@ -219,8 +219,8 @@
     "import os\n",
     "\n",
     "# Path folder database\n",
-    "database_path = r'Data\\wajah\\raw'\n",
-    "output_path = r'Data\\wajah\\crop'\n",
+    "database_path = r'..\\Data\\wajah\\raw'\n",
+    "output_path = r'..\\Data\\wajah\\crop'\n",
     "\n",
     "# Buat folder output jika belum ada\n",
     "os.makedirs(output_path, exist_ok=True)\n",
@@ -413,8 +413,8 @@
    ],
    "source": [
     "# Path folder hasil cropping\n",
-    "cropped_folder = r'Data\\wajah\\crop'\n",
-    "preprocessed_folder = r'Data\\wajah\\preprocessed'\n",
+    "cropped_folder = r'..\\Data\\wajah\\crop'\n",
+    "preprocessed_folder = r'..\\Data\\wajah\\preprocessed'\n",
     "\n",
     "target_size = (224, 224)\n",
     "\n",
