--- a/Scripts/trainModel.ipynb
+++ b/Scripts/trainModel.ipynb
@@ -25,7 +25,7 @@
    "outputs": [],
    "source": [
     "# Step 1: Load and preprocess data\n",
-    "features_csv = r'Data\\features\\features_with_labels.csv'\n",
+    "features_csv = r'..\\Data\\features\\features_with_labels.csv'\n",
     "data = pd.read_csv(features_csv)  # Ganti dengan lokasi data Anda"
    ]
   },
